# read-quran.wasm

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/read_quran/: mod.rs
static/: quran_ar.json  quran_en.json
